apps/notification/notification/resources/webhook-receiver-ingressroute.yaml
# ---
# apiVersion: traefik.io/v1alpha1
# kind: IngressRoute
# metadata:
#   name: webhook-receiver
#   namespace: flux-system
# spec:
#   entryPoints:
#     - websecure
#   routes:
#     - match: Host(`fluxcd.${TLD}`) && PathPrefix(`/hook/`)
#       kind: Rule
#       services:
#         - name: webhook-receiver
#           port: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  namespace: flux-system
spec:
  rules:
    - host: fluxcd.${TLD}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
